Bug 470330 - No launch feedback in the task manager
Summary: No launch feedback in the task manager
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Neon Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-05-27 12:07 UTC by Patrick Silva
Modified: 2023-08-04 13:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-05-27 12:07:57 UTC
SUMMARY
There is no launch feedback in the task manager when I launch an app via Kickoff or keyboard shortcut.

EXPECTED RESULT
launch feedback in the task manager

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-06-03 18:06:33 UTC
Can confirm.

However, this actually broke a few days before we branched for Qt6, so it doesn't look like a Qt6-specific issue. I have a vague memory that a change by Nicolas Fella might have caused it; I'm ccing him.
Comment 2 Kai Uwe Broulik 2023-08-04 13:36:04 UTC
Git commit ddac64e23bf3e6867d85b78775e1285a4b363e63 by Kai Uwe Broulik.
Committed on 04/08/2023 at 10:50.
Pushed by ngraham into branch 'master'.

WaylandStartupTasksModel: Report them on all virtual desktops

The Plasma activation protocol does not report a virtual desktop,
so assume the startup is on all desktops or else it will not be
shown at all.

M  +2    -0    libtaskmanager/waylandstartuptasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ddac64e23bf3e6867d85b78775e1285a4b363e63