WaylandStartupTasksModel: Report them on all virtual desktops

The Plasma activation protocol does not report a virtual desktop,
so assume the startup is on all desktops or else it will not be
shown at all.

BUG: 470330